# ESP32EmbeddedCommonLib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  idf_component.yml  library.json
examples/basic_ultrasonic/: CMakeLists.txt
examples/basic_ultrasonic/main/: CMakeLists.txt  main.c
examples/drv8833_n20_encoder/: CMakeLists.txt
examples/drv8833_n20_encoder/main/: CMakeLists.txt  main.c
examples/filter_ultrasonic_speed/: CMakeLists.txt
examples/filter_ultrasonic_speed/main/: main.c
examples/maze_3_ultrasonic/: CMakeLists.txt
examples/maze_3_ultrasonic/main/: main.c
examples/motion_profile_drive/: CMakeLists.txt
examples/motion_profile_drive/main/: main.c
examples/odometry_encoder_drive/: CMakeLists.txt
examples/odometry_encoder_drive/main/: main.c
examples/pid_ir_line_follower/: CMakeLists.txt
examples/pid_ir_line_follower/main/: main.c
include/ESP32EmbeddedCommonLib/: bmi160.h  ir_line_sensor.h  ultrasonic_sensor.h
include/ESP32EmbeddedCommonLib/algo/: filter.h  maze_solver.h  motion_profile.h  odometry.h  pid.h
include/ESP32EmbeddedCommonLib/driver/: bmi160.h  drv8833.h
include/ESP32EmbeddedCommonLib/io/: led.h
include/ESP32EmbeddedCommonLib/motor/: dc_motor.h  dc_motor_encoder.h  hbridge.h  motor_control.h  pcnt_encoder.h
include/ESP32EmbeddedCommonLib/sensor/: bmi160.h  imu.h  ir_line_sensor.h  ultrasonic_sensor.h
src/: bmi160.c  ir_line_sensor.c  led.c  ultrasonic_sensor.c
src/algo/: filter.c  maze_solver.c  motion_profile.c  odometry.c  pid.c
src/driver/: bmi160.c  drv8833.c
src/io/: led.c
src/motor/: dc_motor.c  dc_motor_encoder.c  motor_control.c  pcnt_encoder.c
src/sensor/: bmi160.c  imu.c  ir_line_sensor.c  ultrasonic_sensor.c
